--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,29 @@
 {
     "name": "laravel/laravel",
-    "version": "11.0.0",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
     "keywords": ["laravel", "framework"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/OneSignal/onesignal-php-api.git"
+        }
+    ],
     "require": {
         "php": "^8.2",
+        "ext-pdo": "*",
+        "berkayk/onesignal-laravel": "^2.1",
         "inertiajs/inertia-laravel": "^1.0",
+        "laravel-notification-channels/onesignal": "^2.5",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "saloonphp/saloon": "3.0",
+        "livewire/livewire": "^3.4",
+        "onesignal/onesignal-php-api": "*@dev",
+        "saloonphp/laravel-plugin": "^3.5",
+        "saloonphp/saloon": "^3.8",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
@@ -27,7 +39,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Namespace\\For\\StringMap\\": "path/to/StringMap/",
+            "Namespace\\For\\Notification\\": "path/to/Notification/"
         }
     },
     "autoload-dev": {
